tests/baselines/reference/parserSuperExpression1.errors.txt
==== tests/cases/compiler/parserSuperExpression1.ts (2 errors) ====
    class C {
        private foo() {
            super.foo();
            ~~~~~
!!! parserSuperExpression1.ts(3,9): error TS2103: 'super' can only be referenced in a derived class.
        }
    }
    
    module M1.M2 {
        class C {
            private foo() {
                super.foo();
                ~~~~~
!!! parserSuperExpression1.ts(10,13): error TS2103: 'super' can only be referenced in a derived class.
            }
        }
    }